--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Поговорим о графике / Нескучный блок о 3D и 2D</title>
-    <base href="/blog-react/">
+    <base href="/">
 <link href="/blog-react/css/min.style.css" rel="stylesheet"></head>
 <body>
    <div id="root"></div> 
