--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Поговорим о графике / Нескучный блок о 3D и 2D</title>
     <base href="/blog-react/">
-<link href="/css/min.style.css" rel="stylesheet"></head>
+<link href="/blog-react/css/min.style.css" rel="stylesheet"></head>
 <body>
    <div id="root"></div> 
-<script type="text/javascript" src="/js/index.js"></script></body>
+<script type="text/javascript" src="/blog-react/js/index.js"></script></body>
 </html>
